rust-examples/tests/compile-fail/Rule_15_6.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {

    let x = 1;

    loop
        x += 1;
}
